Fix Jenkins plugin submission requirements
- Update parent POM version to 5.24 (minimum required)
- Remove developers tag (info fetched from repository)
- Remove java.level property (already in parent POM)
- Add hpi.strictBundledArtifacts=true property
- Replace httpclient with apache-httpcomponents-client-4-api plugin
- Replace jackson-databind with jackson2-api plugin
- Add work/ directory to .gitignore
- Add .github/workflows/jenkins-security-scan.yml
- Add .github/CODEOWNERS file
- Add .github/dependabot.yml for dependency updates

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,9 @@ Thumbs.db
 *.tmp
 diversion_token.txt
 
+# Jenkins work directory
+work/
+
 # Compiled classes and build artifacts
 *.class
 *.stapler
