--- a/.github/workflows/jenkins-security-scan.yml
+++ b/.github/workflows/jenkins-security-scan.yml
@@ -10,16 +10,7 @@ on:
 
 jobs:
   security-scan:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-      - name: Run security scan
-        uses: jenkins-infra/plugin-security-scanner@master
-        with:
-          jenkinsfile: Jenkinsfile
+    uses: jenkins-infra/jenkins-security-scan/.github/workflows/jenkins-security-scan.yaml@v2
+    with:
+      jenkinsfile: Jenkinsfile
 
