--- a/.github/workflows/jenkins-security-scan.yml
+++ b/.github/workflows/jenkins-security-scan.yml
@@ -8,9 +8,11 @@ on:
   schedule:
     - cron: '0 0 * * 0' # Weekly on Sunday
 
+permissions:
+  actions: read
+  security-events: write
+
 jobs:
   security-scan:
     uses: jenkins-infra/jenkins-security-scan/.github/workflows/jenkins-security-scan.yaml@v2
-    with:
-      jenkinsfile: Jenkinsfile
 
