--- a/.github/workflows/jenkins-security-scan.yml
+++ b/.github/workflows/jenkins-security-scan.yml
@@ -1,18 +1,26 @@
+# More information about the Jenkins security scan can be found at the developer docs: https://www.jenkins.io/redirect/jenkins-security-scan/
+
+---
+
 name: Jenkins Security Scan
 
 on:
-  pull_request:
   push:
     branches:
-      - main
-  schedule:
-    - cron: '0 0 * * 0' # Weekly on Sunday
+      - $default-branch
+  pull_request:
+    types: [opened, synchronize, reopened]
+  workflow_dispatch:
 
 permissions:
-  actions: read
   security-events: write
+  contents: read
+  actions: read
 
 jobs:
   security-scan:
     uses: jenkins-infra/jenkins-security-scan/.github/workflows/jenkins-security-scan.yaml@v2
+    with:
+      java-cache: 'maven'  # Optionally enable use of a build dependency cache. Specify 'maven' or 'gradle' as appropriate.
+      # java-version: 17  # Optionally specify what version of Java to set up for the build, or remove to use a recent default.
 
