Address Jenkins plugin submission feedback and fix SpotBugs warnings
This commit addresses all feedback received from the Jenkins plugin team
and fixes all SpotBugs static analysis warnings.

POM.xml changes (per Jenkins feedback):
- Add <?jelly escape-by-default='true'?> to config.jelly template
- Update all URLs to point to jenkinsci/diversion-scm-plugin repository
- Remove <tag>HEAD</tag> from SCM section (set via parent POM)
- Remove project.build.sourceEncoding property (UTF-8 is default)
- Remove jakarta.servlet-api dependency (not needed)
- Remove apache-httpcomponents-client-4-api dependency (using Java HttpClient)
- Remove workflow-step-api and structs dependencies (not needed)
- Remove junit dependency (provided by parent POM)
- Remove jenkins-test-harness dependency (provided by parent POM)
- Keep plain-credentials and jackson2-api (required for compilation)

HTTP Client improvements:
- Add proxy support using Jenkins ProxyConfiguration
- Use Java's built-in HttpClient with ProxySelector for proxy support
- Remove redundant null check for Jenkins.get() (known to be non-null)

SpotBugs fixes (12 warnings resolved):
- REC_CATCH_EXCEPTION: Replace generic Exception catches with specific exceptions
  * IOException | InterruptedException for API calls
  * IOException | ParserConfigurationException | SAXException for XML parsing
  * ReflectiveOperationException for reflection operations
- NP_NULL_ON_SOME_PATH_FROM_RETURN_VALUE: Add null checks for getParent() calls
- URF_UNREAD_FIELD: Remove unused 'exists' field from DiversionSCMFile
- BC_UNCONFIRMED_CAST: Add instanceof checks before casting SCMHead
- NP_METHOD nullness annotations: Fix to match parent class signatures
  * Change baseline parameter from @NonNull to @CheckForNull
  * Change build() return type from @CheckForNull to @NonNull

Code quality improvements:
- Fix FileWriter to use explicit UTF-8 encoding
- Use try-with-resources for proper resource cleanup
- Improve exception handling specificity th

--- a/pom.xml
+++ b/pom.xml
@@ -38,19 +38,16 @@
     </license>
   </licenses>
   
-  <url>https://github.com/ibain/jenkins-diversion-scm-plugin</url>
+  <url>https://github.com/jenkinsci/diversion-scm-plugin</url>
   <scm>
-    <connection>scm:git:https://github.com/ibain/jenkins-diversion-scm-plugin.git</connection>
-    <developerConnection>scm:git:git@github.com:ibain/jenkins-diversion-scm-plugin.git</developerConnection>
-    <url>https://github.com/ibain/jenkins-diversion-scm-plugin</url>
-    <tag>HEAD</tag>
+    <connection>scm:git:https://github.com/jenkinsci/diversion-scm-plugin.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com/jenkinsci/diversion-scm-plugin.git</developerConnection>
+    <url>https://github.com/jenkinsci/diversion-scm-plugin</url>
   </scm>
 
   <properties>
     <jenkins.baseline>2.504</jenkins.baseline>
     <jenkins.version>${jenkins.baseline}.3</jenkins.version>
-    <jenkins-test-harness.version>2.70</jenkins-test-harness.version>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <hpi.strictBundledArtifacts>true</hpi.strictBundledArtifacts>
   </properties>
 
@@ -68,78 +65,29 @@
 
  <dependencies>
    <!-- Jenkins SCM API (plugin dependency, provided by Jenkins at runtime) -->
-   <!-- Scope is compile for testing, but won't be bundled in HPI -->
    <dependency>
      <groupId>org.jenkins-ci.plugins</groupId>
      <artifactId>scm-api</artifactId>
    </dependency>
    
-   <!-- Jakarta Servlet API for newer Jenkins; provided at runtime -->
-   <dependency>
-     <groupId>jakarta.servlet</groupId>
-     <artifactId>jakarta.servlet-api</artifactId>
-     <scope>provided</scope>
-   </dependency>
-   
-   <!-- Jenkins Credentials plugins (provided by Jenkins at runtime) -->
-   <!-- Scope is compile for testing, but won't be bundled in HPI -->
+   <!-- Jenkins Credentials plugin (provided by Jenkins at runtime) -->
    <dependency>
      <groupId>org.jenkins-ci.plugins</groupId>
      <artifactId>credentials</artifactId>
    </dependency>
    
+   <!-- Plain Credentials - needed for StringCredentials type -->
+   <!-- maven-hpi-plugin requires compile scope for testing -->
    <dependency>
      <groupId>org.jenkins-ci.plugins</groupId>
      <artifactId>plain-credentials</artifactId>
    </dependency>
    
-   <!-- HTTP Client (4.x API) - using Jenkins API plugin -->
-   <dependency>
-     <groupId>org.jenkins-ci.plugins</groupId>
-     <artifactId>apache-httpcomponents-client-4-api</artifactId>
-   </dependency>
-   
-   <!-- JSON Processing - using Jenkins API plugin -->
+   <!-- Jackson2 API - needed for JSON parsing (provided by Jenkins) -->
    <dependency>
      <groupId>org.jenkins-ci.plugins</groupId>
      <artifactId>jackson2-api</artifactId>
    </dependency>
-   
-   <!-- Workflow Step API (pipeline integration, provided by Jenkins at runtime) -->
-   <!-- Scope is compile for testing, but won't be bundled in HPI -->
-   <dependency>
-     <groupId>org.jenkins-ci.plugins.workflow</groupId>
-     <artifactId>workflow-step-api</artifactId>
-   </dependency>
-   
-   <!-- Structs Plugin - required for Modern SCM UI, provided by Jenkins at runtime -->
-   <!-- Scope is compile for testing, but won't be bundled in HPI -->
-   <dependency>
-     <groupId>org.jenkins-ci.plugins</groupId>
-     <artifactId>structs</artifactId>
-   </dependency>
-  
-  <!-- Testing -->
-  <dependency>
-    <groupId>junit</groupId>
-    <artifactId>junit</artifactId>
-    <version>4.13.2</version>
-    <scope>test</scope>
-  </dependency>
-  
-  <!-- Jenkins Test Harness (version via property) -->
-  <dependency>
-    <groupId>org.jenkins-ci.main</groupId>
-    <artifactId>jenkins-test-harness</artifactId>
-    <version>${jenkins-test-harness.version}</version>
-    <scope>test</scope>
-    <exclusions>
-      <exclusion>
-        <groupId>javax.servlet</groupId>
-        <artifactId>javax.servlet-api</artifactId>
-      </exclusion>
-    </exclusions>
-  </dependency>
   
   <!-- Optional: Global Pipeline Library support
        Commented out to avoid forcing installation of a deprecated plugin.
