Enable Continuous Delivery (CD) for automatic releases
- Add incrementals plugin configuration (.mvn/extensions.xml, .mvn/maven.config)
- Update pom.xml to use ${revision}${changelist} version format (1.123.vabcdef...)
- Add CD workflow (.github/workflows/cd.yaml) for automatic releases
- Update dependabot.yml to include GitHub Actions updates
- Update README.md to remove hardcoded version (now auto-generated)
- Update CHANGELOG.md with CD setup notes

Releases will now happen automatically when PRs with "interesting" labels
(enhancement, bug, developer, dependencies) are merged and Jenkins build passes.

Version format: 1.123.vabcdef456789 (commit count + git hash)

See: https://www.jenkins.io/doc/developer/publishing/releasing-cd/

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,4 +10,8 @@ updates:
     commit-message:
       prefix: "deps"
       include: "scope"
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "monthly"
 
